# ai-poker

./: README.md  pyproject.toml  test_clubs_poker.py
ai_poker/genetic/: AST_agent.py  constants.py  evolutionary_algorithm.py  play_fossil.py  simple_agents.py  test.py
ai_poker/mvp/: agents.py  poker_env.py  test_clubs_poker.py  visualization.py
